@@ -3,6 +3,7 @@
 	* CORE: Fixed a number of flaky tests based on field order. Thanks CharlesZKQ, NanaOkada, hwang-pku, chimo173.
 	* CORE: Upgraded SimpleLogging code to fix annoying startup messages.  Thanks to JayDi85.
 	* CORE: Removed getCreateTableStatements(DatabaseType, ...).  ConnectionSource now required.  Thanks to blacatena.
+	* CORE: Added support for timezone formatter for string date converters.  Thanks to juur.
 	* ANDROID: Fixed bug in number rows affected with executeUpdateDelete() in newer API versions.  Thanks to WonShaw.
 
 5.6: 6/22/2021
